--- a/branches/limehd/res/layout/input.xml
+++ b/branches/limehd/res/layout/input.xml
@@ -18,7 +18,7 @@
 */
 -->
 
-<net.toload.main.LIMEKeyboardView
+<net.toload.main.hd.LIMEKeyboardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/keyboard"
         android:layout_alignParentBottom="true"
