--- a/branches/limehd/res/layout/candidates.xml
+++ b/branches/limehd/res/layout/candidates.xml
@@ -48,7 +48,7 @@
     </LinearLayout>
     
     <view xmlns:android="http://schemas.android.com/apk/res/android"
-		    class="net.toload.main.CandidateView"
+		    class="net.toload.main.hd.CandidateView"
 	        android:id="@+id/candidates"
 	        android:layout_width="wrap_content"
 	        android:layout_height="38dp"
